=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 v1.023 - Under Development

=over

=item *

Fixed symlink bug that caused thumbnails to disappear from the UI
after a Krang instance was moved to a different location on the
filesystem.  [Peter]

=item *

Fixed a bug where deleting a newly-copied story threw an error in the
UI. [Peter]

=item *

Added platform support for Gentoo release 1.5.2, thanks to a patch 
from Fred Moyer (fmoyer@plusthree.com) [Perrin]

=back


=head2 v1.022 - August 6, 2004

=over

=item *

Added support for passing a list of classes to Krang::Story->find().
[Sam]

=item *

Added support for C<publish_category_per_page()> in the publish
process.  This functionality allows element library developers to
generate category template output customized for each page in a
story. [Peter]

=item *

Fixed a bug where Krang::ElementClass would complain about a missing
template for a sub-element that wasn't actually needed. [Sam]

=item *

Fixed a bug related to the internal tracking of assets in
L<Krang::Publisher>.  This finishes up a minor restructuring that
ensures C<krang_publish> publishes each story/media object only once
during a publish run. [Peter]

=item *

Fixed a bug in C<krang_publish>.  When publishing with the
C<--site_id> argument, all media objects under that site are now
published, not just those media objects linked to stories. [Peter]

=item *

Cleaned up the code handling the management of internal asset lists in
L<Krang::Publisher>.  This code is used to ensure the same asset is
not published more than once during a publish run. [Peter]

=item *

Added support for searching on C<site_id> in Krang::Media->find().
[Peter]

=item *

Added C<publish_category_per_page()> to
L<Krang::ElementClass::TopLevel>.  This method will soon be used by
L<Krang::Publisher> to determine whether or not to publish category
elements once for each page in a story, or once for all pages in a